unpackaged/main/default/objects/AllCallsInfo__c/AllCallsInfo__c.object-meta.xml
<CustomObject>
    <label>All Calls Info</label>
    <nameField>
        <displayFormat>CAL-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>All Calls Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>