unpackaged/main/default/objects/AllCallsInfo__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This can be used for add this record to related log a call only once(By default its checked when I added to log a call its updated to uncheck).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>