unpackaged/main/default/objects/AllCallsInfo__c/fields/Call_Category__c.field-meta.xml
<CustomField>
    <fullName>Call_Category__c</fullName>
    <formula>IF(ISPICKVAL(Call_Type__c, &#39;Notified&#39;),&#39;Missed&#39;,TEXT(Call_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Category</label>
    <type>Text</type>
</CustomField>