unpackaged/main/default/objects/AllCallsInfo__c/fields/Call_From__c.field-meta.xml
<CustomField>
    <fullName>Call_From__c</fullName>
    <label>Call From</label>
    <length>180</length>
    <type>Text</type>
</CustomField>