unpackaged/main/default/objects/AllCallsInfo__c/fields/CallDuration__c.field-meta.xml
<CustomField>
    <fullName>CallDuration__c</fullName>
    <label>CallDuration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>