unpackaged/main/default/objects/AllCallsInfo__c/fields/End_of_the_call__c.field-meta.xml
<CustomField>
    <fullName>End_of_the_call__c</fullName>
    <label>End of the call</label>
    <type>DateTime</type>
</CustomField>