unpackaged/main/default/objects/AllCallsInfo__c/fields/Start_of_the_call__c.field-meta.xml
<CustomField>
    <fullName>Start_of_the_call__c</fullName>
    <label>Start of the call</label>
    <type>DateTime</type>
</CustomField>