unpackaged/main/default/objects/AllCallsInfo__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <label>SF User</label>
    <length>180</length>
    <type>Text</type>
</CustomField>