unpackaged/main/default/objects/AllCallsInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User_Agent__c</columns>
    <columns>Call_Category__c</columns>
    <columns>Call_From__c</columns>
    <columns>Call_To__c</columns>
    <columns>CallDuration__c</columns>
    <columns>Start_of_the_call__c</columns>
    <columns>End_of_the_call__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>